Code reformatted; Compilation warnings are fixed; WB init function was added